basic game controller

--- a/app/views/canvas/index.scala.html
+++ b/app/views/canvas/index.scala.html
@@ -2,5 +2,8 @@
 
 @main("facebook canvas") {
 	<h1>Hello from facebook canvas</h1>
-	<p>@message</p>    
+	<p>@message</p> 
+	<a href="/login">Администраторски достъп</a>
+	<a href="/question/add">Добави въпрос</a>  
+	<a href="/">Играй</a>     
 }
