--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,5 +3,7 @@
 @main("Welcome to Play 2.0") {
     
     <p>@message</p>
-    
+    <a href="/login">Администраторски достъп</a>
+	<a href="/question/add">Добави въпрос</a>  
+	<a href="/">Играй</a> 
 }
