--- a/app/views/questions/show.scala.html
+++ b/app/views/questions/show.scala.html
@@ -6,4 +6,5 @@
     <h1> Категория @question.getCategory()</h1>
     <h1> Верен отговор @question.getRight_answer()</h1>
     <a href="/admin/question/add">Нов въпрос</a>
+    <a href="/logout">Изход</a>
 }
