--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -354,10 +354,35 @@ div.message{
 	left:200px;
 }
 div.betting div img{
-	width: 180px !important;
-	height: 180px !important;
-	border: 4px solid blue !important;
-	-webkit-border-radius: 2px;
+	width: 140px;
+	height: 140px;
+	border: 4px solid rgb(41, 122, 119) !important;
+	-webkit-border-radius: 8px !important;
+	opacity: 0.3;
+}
+div.betting span.name{
+	font-size: 17px !important;
+	color: rgb(14, 95, 60) !important;
+	text-shadow: 3px 3px 3px rgb(156, 152, 43) !important;
+	
+}
+div.betting div.player1{
+	position: absolute;
+	
+}
+div.betting div.player2{
+	position: absolute;
+	
+	left: 608px;
+}
+div.betting div.player3{
+	position: absolute;
+	top: 642px;
+	left: 608px;
+}
+div.betting div.player4{
+	position: absolute;
+	top: 642px;
 }
 span.points{
 	position: absolute;
@@ -372,16 +397,18 @@ span.points{
 	top: 0px;
 	left: 0px;
 }
-#message-bet{
+#message{
 	position: absolute;
-	top: 248px;
-	left: 118px;
+	top: 203px;
+	left: 169px;
 	font-size: 17px;
 	text-align: center;
-	width: 512px;
-	height: 29px;
-	color: rgb(12, 124, 124);
+	width: 404px;
+	height: 137px;
+	color: rgb(7, 46, 46);
 	font-weight: bolder;
+	text-shadow: 3px 3px 3px rgba(93, 132, 138, 0.72);
+	word-wrap: break-word;
 }
 #bet{
 	position: absolute;
@@ -440,3 +467,262 @@ button.right{
 	font-size: 16px !important;
 }
 
+#ballon1{
+	width: 118px;
+	height: 99px;
+	position: absolute;
+	left: 88px;
+	top: 99px;
+}
+
+#ballon2{
+	left: -79px;
+	top: 100px;
+	width: 127px;
+	height: 99px;
+	position: absolute;
+}
+
+#ballon3{
+	top: -60px;
+	left: -101px;
+	width: 127px;
+	height: 99px;
+	position: absolute;
+}
+
+#ballon4{
+	top: -66px;
+	left: 103px;
+	width: 123px;
+	height: 99px;
+	position: absolute;
+}
+
+#answer1{
+	font-weight: bolder;
+	font-size: 35px;
+	position: absolute;
+	top: 132px;
+	left: 134px;
+}
+
+#answer2{
+	font-weight: bolder;
+	font-size: 35px;
+	position: absolute;
+	top: 135px;
+	left: -32px;
+}
+
+
+#answer3{
+	font-weight: bolder;
+	font-size: 35px;
+	position: absolute;
+	top: -38px;
+	left: -49px;
+}
+
+
+#answer4{
+	font-weight: bolder;
+	font-size: 35px;
+	position: absolute;
+	top: -42px;
+	left: 151px;
+}
+
+#time1{
+	width: 74px;
+	font-weight: bolder;
+	position: absolute;
+	top: 155px;
+	left: 113px;
+}
+#time2{
+	width: 74px;
+	font-weight: bolder;
+	position: absolute;
+	top: 158px;
+	left: -58px;
+}
+
+#time3{
+	width: 74px;
+	font-weight: bolder;
+	position: absolute;
+	top: -15px;
+	left: -78px;
+}
+
+#time4{
+	width: 74px;
+	font-weight: bolder;
+	position: absolute;
+	top: -23px;
+	left: 126px;
+}
+
+#flag-answerA{
+	position: absolute;
+	top: 1px;
+	left: -9px;
+	font-size: 40px;
+	font-weight: bolder;
+	text-shadow: 3px 3px 3px rgb(82, 160, 147);
+	font-style: oblique;
+	color: rgb(77, 97, 88);
+}
+
+#flag-answerB{
+	position: absolute;
+	top: 1px;
+	left: 296px;
+	font-size: 40px;
+	font-weight: bolder;
+	text-shadow: 3px 3px 3px rgb(82, 160, 147);
+	font-style: oblique;
+	color: rgb(77, 97, 88);
+}
+
+#flag-answerC{
+	position: absolute;
+	top: 72px;
+	left: -9px;
+	font-size: 40px;
+	font-weight: bolder;
+	text-shadow: 3px 3px 3px rgb(82, 160, 147);
+	font-style: oblique;
+	color: rgb(77, 97, 88);
+}
+
+#flag-answerD{
+	position: absolute;
+	top: 72px;
+	left: 296px;
+	font-size: 40px;
+	font-weight: bolder;
+	text-shadow: 3px 3px 3px rgb(82, 160, 147);
+	font-style: oblique;
+	color: rgb(77, 97, 88);
+}
+
+/* Pie Timer */
+#timer {
+    margin: 20px;
+    width: 80px;
+}
+
+.pietimer {
+    position:relative;
+    font-size: 200px;
+    width:1em;
+    height:1em;
+    float: left;
+}
+.pietimer > .percent {
+    position: absolute;
+    top: 1.05em;
+    left: 0;
+    width: 3.33em;
+    font-size: 0.3em;
+    text-align:center;
+    display: none;
+}
+.pietimer > .slice {
+    position:absolute;
+    width:1em;
+    height:1em;
+    clip:rect(0px,1em,1em,0.5em);
+}
+.pietimer > .slice.gt50 {
+    clip:rect(auto, auto, auto, auto);
+}
+.pietimer > .slice > .pie {
+    border: 0.1em solid #c0c0c0;
+    position:absolute;
+    width:0.8em; /* 1 - (2 * border width) */
+    height:0.8em; /* 1 - (2 * border width) */
+    clip:rect(0em,0.5em,1em,0em);
+    -moz-border-radius:0.5em;
+    -webkit-border-radius:0.5em;
+    border-radius:0.5em;
+}
+.pietimer > .slice > .pie.fill {
+    -moz-transform:rotate(180deg) !important;
+    -webkit-transform:rotate(180deg) !important;
+    -o-transform:rotate(180deg) !important;
+    transform:rotate(180deg) !important;
+}
+.pietimer.fill > .percent {
+    display: none;
+}
+.pietimer.fill > .slice > .pie {
+    border: transparent;
+    background-color: #c0c0c0;
+    width:1em;
+    height:1em;
+}
+
+#finish-message{
+	position: absolute;
+	left: 163px;
+	top: 336px;
+	color: rgb(70, 70, 16);
+	font-size: 45px;
+	font-weight: bolder;
+	text-align: center;
+	text-shadow: 5px 5px 5px rgb(160, 194, 53);
+	font-stretch: expanded;
+	font-style: italic;
+}
+#message-out-of-points{
+	position: absolute;
+	left: 4px;
+	top: 54px;
+	color: rgb(236, 3, 3);
+	font-weight: bold;
+	font-size: 16px;
+	
+	background-color: rgb(234, 236, 220);
+	text-align: center;	
+}
+
+#timer{
+	position: absolute;
+	left: 302px;
+	top: 208px;
+}
+
+#timer1{
+	margin: 20px;
+    width: 80px;
+    position: absolute;
+	left: 15px;
+	top: 127px;
+}
+
+#timer2{
+	margin: 20px;
+    width: 80px;
+    position: absolute;
+    left: 626px;
+	top: 127px;
+}
+
+#timer3{
+	margin: 20px;
+    width: 80px;
+    position: absolute;
+	left: 626px;
+	top: 654px;
+}
+
+#timer4{
+	margin: 20px;
+    width: 80px;
+    position: absolute;
+	left: 18px;
+	top: 654px;
+}
