migrate to play 2.1.0 implement jokers

--- a/.target/views/admins/login.scala.html
+++ b/.target/views/admins/login.scala.html
@@ -2,15 +2,18 @@
 
 @main_admin("Login") {
 	
-	@if(flash.contains("success")) {
-                <p class="success">
-                    @flash.get("success")
-                </p>
+            
+            @if(flash.contains("success")) {
+               
+                 <div class="alert alert-success">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+         @flash.get("success")</div>
             }
-             @if(flash.contains("error")) {
-                <p class="success">
-                    @flash.get("error")
-                </p>
+            @if(flash.contains("error")) {
+               
+                 <div class="alert alert-error">
+        <button type="button" class="close" data-dismiss="alert">×</button>
+         @flash.get("error")</div>
             }
 	
 	
