--- a/app/views/game/index.scala.html
+++ b/app/views/game/index.scala.html
@@ -18,12 +18,16 @@
 			</div> 
 			<div class="answers"> 
 				<span id="flag-answerA"> A </span>
+				<span id="choiceA" style="display:none;"> </span>
 				<button class="btn answer" id="answerA"></button>
-				<span  id="flag-answerB"> B </span>
+				<span  id="flag-answerB" > B </span>
+				<span id="choiceB" style="display:none;"></span>
 				<button class="btn answer" id="answerB"></button>
 				<span id="flag-answerC"> C </span>
+				<span id="choiceC" style="display:none;"></span>
 				<button class="btn answer" id="answerC"></button>
 				<span id="flag-answerD"> D </span>
+				<span id="choiceD" style="display:none;"></span>
 				<button class="btn answer" id="answerD"></button>
 			</div>
 		</div>
@@ -31,7 +35,7 @@
 	
 		<div class="jokers">  
 			<button class="btn joker" id="joker50">50/50</button>
-			<button class="btn joker">Гласа на мнозинството</button>
+			<button class="btn joker" id="joker_voice" style="display:none;">Гласа на мнозинството</button>
 		</div>
 		<span id="message" style="display:none;"> </span>
 		<span id="bet" style="display:none;"></span>
