update admin profile

--- a/.target/views/game/index.scala.html
+++ b/.target/views/game/index.scala.html
@@ -1,5 +1,5 @@
 @(user_uid: Long)
-@main_play("star playing") {
+@main_play("Know your trump") {
    	<a href="/canvas/"><img class="exit" src="@routes.Assets.at("images/exit.jpg")"></a>
 	<div id="users-table"></div>
 	<div id="finish-message" style="display:none;"> </div>
