--- a/.target/views/user_questions/add.scala.html
+++ b/.target/views/user_questions/add.scala.html
@@ -3,7 +3,7 @@
 @import helper._
 @import helper.twitterBootstrap._
 
-@main("Create task") {
+@main("Add question") {
 	
     @if(flash.contains("success")) {
                
@@ -81,5 +81,6 @@
 	            <input type="reset" class="btn" value="Reset"> 
           </div>
     </form>
-    
+   
+  
 }
