--- a/app/views/questions/view_from_user.scala.html
+++ b/app/views/questions/view_from_user.scala.html
@@ -7,10 +7,11 @@
 	<div id="exit"> <p> <a class="btn btn-inverse" href="/logout"> Изход</a> </p> </div>
 <ul class="nav nav-tabs">
       <li>
-       <a href="admin">Home</a> 
+       <a href="/admin">Home</a> 
       </li>
      <li><a href="/admin/question/add">Добави въпрос</a></li>
 	<li class="active"> <a href="/admin/users_questions"> Преглед на потребоителски въпроси</a></li>
+	<li> <a href="/admin/questions"> Преглед на въпроси</a></li>
 		       
     </ul>
 
