--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -27,7 +27,7 @@
 		</div>
 	
 		<div id="btn-info">
-			 <a class="btn btn-block" href="#" id="menu-btn">За мен</a> 
+			 <a class="btn btn-block" href="/for_me" id="menu-btn">За мен</a> 
 		</div>
 	
         @content
