--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -800,3 +800,12 @@ button.right{
 	color: rgb(14, 223, 173);
 }
 
+#info{
+	position: absolute;
+	left: 110px;
+	top: 211px;
+	font-size: 16px;
+	color: rgb(5, 34, 28);
+	font-weight: bolder;
+	text-shadow: 2px 2px 3px rgb(98, 114, 111);
+}
