--- a/.target/views/game/index.scala.html
+++ b/.target/views/game/index.scala.html
@@ -1,6 +1,7 @@
 @(user_uid: Long)
 @main_play("Know your trump") {
-   	<a href="/canvas/"><img class="exit" src="@routes.Assets.at("images/exit.jpg")"></a>
+	<div id="fb-root"></div>  
+   	<a href="/home/"><img class="exit" src="@routes.Assets.at("images/exit.jpg")"></a>
 	<div id="users-table"></div>
 	<div id="finish-message" style="display:none;"> </div>
 	<div id="message-out-of-points" ></div>
@@ -10,6 +11,7 @@
 	<div id="timer2"> </div>
 	<div id="timer3"> </div>
 	<div id="timer4"> </div>
+	<div id="coins"><img src="/assets/images/coins.gif"><span></span></div>
 		<div class="question" style="display:none;"> 
 			
 			
@@ -44,7 +46,7 @@
 			<span class="range">
 				
 				<input type="range" name="raise" style="width:150px;" min="1" max="100" value="1">
-				<output for="raise" onforminput="value = raise.valueAsNumber;"></output> 
+				<output  class="range" for="raise" onforminput="value = raise.valueAsNumber;"></output> 
 			</span>
 			<button class="btn btn-block bet" id="raise">Заложи </button><br>
 			<span class="bet"></span>
@@ -108,9 +110,11 @@
 		
 		<div class="message"><%=message %> </div>
 	</script>
+    <script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
+	<script src="//connect.facebook.net/en_US/all.js"></script>  
+
 	<script>
+		FB.init({appId: "249406605187123", status: true, cookie: true});
 		window.game = new Game(@user_uid).start();
 	</script>
-	 <script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>  
-	    
 }
