--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,7 +19,7 @@
     <body id="home_users">
     
 		<div id="btn-home">
-			 <a class="btn btn-block" href="/canvas/" id="menu-btn">Начало</a> 
+			 <a class="btn btn-block" href="/home/" id="menu-btn">Начало</a> 
 		</div>
 	
 		<div id="btn-question">
