--- a/app/views/questions/edit.scala.html
+++ b/app/views/questions/edit.scala.html
@@ -11,7 +11,7 @@
       </li>
      <li ><a href="/admin/question/add">Добави въпрос</a></li>
 	<li> <a href="/admin/users_questions"> Преглед на потребоителски въпроси</a></li>
-	<li class="active"> <a href="/admin/questions"> Преглед на въпроси</a></li>
+	<li> <a href="/admin/questions"> Преглед на въпроси</a></li>
 	
     </ul>  
     
