--- a/app/views/user_questions/add.scala.html
+++ b/app/views/user_questions/add.scala.html
@@ -81,6 +81,6 @@
 	            <input type="reset" class="btn" value="Reset"> 
           </div>
     </form>
-   
+   <script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
   
 }
